<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimens_10">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="@dimen/dimens_100"
            android:layout_height="@dimen/dimens_100"
            android:layout_marginTop="@dimen/dimens_50"
            android:src="@drawable/ic_estate_agent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20"
            android:hint="@string/email"
            app:layout_constraintTop_toBottomOf="@id/iv_profile">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/tl_email"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bt_login"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/tl_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/bt_login">

            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/dimens_5"
                android:text="@string/lupa_password" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="@dimen/dimens_5"
                android:text="@string/belum_punya_akun_daftar" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>