<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_bg_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/workdesk"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/dimens_100"
                android:layout_height="@dimen/dimens_100"
                android:layout_marginStart="@dimen/dimens_20"
                android:src="@drawable/ic_estate_agent"
                app:layout_constraintBottom_toBottomOf="@id/iv_bg_profile"
                app:layout_constraintStart_toStartOf="@id/iv_bg_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_10"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_profile"
                app:layout_constraintTop_toTopOf="@id/iv_profile">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:text="Suryo Widodo" />

                <RatingBar
                    android:id="@+id/rb_profile"
                    style="@android:style/Widget.Holo.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:numStars="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_10"
                android:layout_marginTop="@dimen/dimens_10"
                android:layout_marginEnd="@dimen/dimens_10"
                android:orientation="vertical"
                android:weightSum="7"
                app:layout_constraintTop_toBottomOf="@id/iv_bg_profile">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bt_iklan"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimens_70"
                    android:layout_weight="1"
                    android:text="@string/pasang_iklan"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/dimens_5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/dimens_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_diamond" />

                    <Space
                        android:layout_width="@dimen/dimens_10"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/akun_premium"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/dimens_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_address" />

                    <Space
                        android:layout_width="@dimen/dimens_10"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/iklan_aktif"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/dimens_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_notification" />

                    <Space
                        android:layout_width="@dimen/dimens_10"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Inbox dan Notifikasi"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/dimens_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_connection" />

                    <Space
                        android:layout_width="@dimen/dimens_10"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/koneksi"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/dimens_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_settings" />

                    <Space
                        android:layout_width="@dimen/dimens_10"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Pengaturan"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:padding="@dimen/dimens_5"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_logout" />

                    <Space
                        android:layout_width="@dimen/dimens_10"
                        android:layout_height="match_parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Keluar"
                        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>